// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders the component when no user and no loading 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-20 MuiToolbar-gutters"
  >
    <section
      class="makeStyles-leftToolbar-17"
    >
      <h1
        class="MuiTypography-root makeStyles-navTitle-21 MuiTypography-h6 MuiTypography-colorInherit"
      >
        title
      </h1>
    </section>
    <section
      class="makeStyles-rightToolbar-18"
    >
      <ul
        class="makeStyles-nav-19"
      />
    </section>
  </div>
</header>
`;

exports[`App component renders the component when user loaded 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-13 MuiToolbar-gutters"
  >
    <section
      class="makeStyles-leftToolbar-10"
    >
      <h1
        class="MuiTypography-root makeStyles-navTitle-14 MuiTypography-h6 MuiTypography-colorInherit"
      >
        title
      </h1>
    </section>
    <section
      class="makeStyles-rightToolbar-11"
    >
      <ul
        class="makeStyles-nav-12"
      >
        <li>
          <a
            aria-disabled="false"
            aria-label="navigation.home"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            data-testid="navigation-home"
            href="/"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </li>
        <li>
          <a
            aria-disabled="false"
            aria-label="navigation.settings"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            data-testid="navigation-settings"
            href="/settings"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"
                  transform="scale(1.2, 1.2)"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </li>
        <li>
          <button
            aria-label="navigation.logout"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            data-testid="logout"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </section>
  </div>
</header>
`;

exports[`App component renders the component when user loading 1`] = `
<header
  class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
>
  <div
    class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-6 MuiToolbar-gutters"
  >
    <section
      class="makeStyles-leftToolbar-3"
    >
      <h1
        class="MuiTypography-root makeStyles-navTitle-7 MuiTypography-h6 MuiTypography-colorInherit"
      >
        title
      </h1>
    </section>
    <section
      class="makeStyles-rightToolbar-4"
    >
      <ul
        class="makeStyles-nav-5"
      />
    </section>
  </div>
</header>
`;
